# classic-clones

./: .gitignore  README.md
pong/: CMakeLists.txt  README.md
pong/src/: AI.cpp  AI.hpp  Ball.cpp  Ball.hpp  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  Player.cpp  Player.hpp  main.cpp
pong/src/screens/: Ending.cpp  Ending.hpp  GamePlay.cpp  GamePlay.hpp  GamePlayPVP.cpp  GamePlayPVP.hpp  Logo.cpp  Logo.hpp  Menu.cpp  Menu.hpp  Options.cpp  Options.hpp  Pause.cpp  Pause.hpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  Title.cpp  Title.hpp
pong/src/utils/: Text.cpp  Text.hpp  TextHelper.cpp  TextHelper.hpp
space-invaders/: CMakeLists.txt  README.md
space-invaders/src/: main.cpp
template/: CMakeLists.txt  README.md
